# cyber-hygiene-scanner

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/app/: main.py
cyber_hygiene_scanner/: cli.py  models.py
cyber_hygiene_scanner/services/: http_checks.py  port_scanner.py  scanner.py  scorer.py
cyber_hygiene_scanner/utils/: targets.py
frontend/: index.html
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/services/: api.ts
tests/: test_scorer.py  test_targets.py
